src/test/deca/syntax/valid/resultats/test9_bool-lex.res
'{': [@0,362:362='{',<36>,16:0]
'println': [@1,365:371='println',<18>,17:1]
'(': [@2,372:372='(',<34>,17:8]
'true': [@3,373:376='true',<24>,17:9]
')': [@4,377:377=')',<35>,17:13]
';': [@5,378:378=';',<39>,17:14]
'println': [@6,381:387='println',<18>,18:1]
'(': [@7,388:388='(',<34>,18:8]
'false': [@8,389:393='false',<10>,18:9]
')': [@9,394:394=')',<35>,18:14]
';': [@10,395:395=';',<39>,18:15]
'}': [@11,397:397='}',<37>,19:0]
