src/test/deca/syntax/invalid/resultats/test9_float-lex.res
'{': [@0,359:359='{',<36>,15:0]
'print': [@1,362:366='print',<17>,16:1]
'(': [@2,367:367='(',<34>,16:6]
INT: [@3,368:368='0',<1>,16:7]
IDENT: [@4,369:371='x12',<26>,16:8]
'.': [@5,372:372='.',<32>,16:11]
INT: [@6,373:373='0',<1>,16:12]
')': [@7,374:374=')',<35>,16:13]
';': [@8,375:375=';',<39>,16:14]
'}': [@9,377:377='}',<37>,17:0]
